[package]
name = "hookd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json", "uuid"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.94"
confy = "0.5.1"
env_logger = "0.10.0"
log = "0.4.17"